# brainf

./: .gitignore  Cargo.toml  README.md
brainf/: brackets-mismatch.bf
src/: main.rs  preprocessor.rs  shared.rs  tape.rs  util.rs  vm.rs
src/vm/: tape.rs
