[package]
name = "brainf"
version = "0.0.1"
authors = ["Viktor A. Rozenko Voitenko <sharp.vik@gmail.com>"]
edition = "2018"
description = "Brainfuck interpreter written in Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sharpvik/brainf-rs/"

[dependencies]
text_io = "0.1.8"
clap = "2.33.3"
colored = "2.0.0"
idioma = "0.0.3"
